--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@usedapp/core": "^0.11.0",
     "@web3-react/walletconnect-connector": "^6.2.13",
     "classnames": "^2.3.1",
+    "embla-carousel-react": "^6.2.0",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "next": "12.1.0",
