fetch data from the graph & update logbook card

--- a/.env.development
+++ b/.env.development
@@ -4,5 +4,5 @@ NEXT_PUBLIC_GA_ID=
 NEXT_PUBLIC_ALCHEMY_MUMBAI_URL=https://polygon-mumbai.g.alchemy.com/v2/mA4cWQBQsGgAJCkFRaN1kgbIA2fL2Dqn
 NEXT_PUBLIC_ALCHEMY_POLYGON_URL=https://polygon-mainnet.g.alchemy.com/v2/0_KiKC3EfY4aDnldG30Dlz830ykvGOYu
 NEXT_PUBLIC_THE_GRAPH_API_KEY=
-NEXT_PUBLIC_THE_GRAPH_API_URL=
+NEXT_PUBLIC_THE_GRAPH_API_URL=https://api.thegraph.com/subgraphs/name/thematters/logbook
 NEXT_PUBLIC_CONTRACT_ADDRESS=0x203197e074b7a2f4ff6890815e4657a9c47c68b1
